--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,15 +1,26 @@
 [versions]
-agp = "8.6.0"
-kotlin = "1.9.0"
-coreKtx = "1.10.1"
+agp = "8.4.0"
+kotlin = "2.0.0"
+coreKtx = "1.13.1"
 junit = "4.13.2"
-junitVersion = "1.1.5"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.6.1"
-activityCompose = "1.8.0"
+junitVersion = "1.2.1"
+espressoCore = "3.6.1"
+lifecycleRuntimeKtx = "2.8.6"
+activityCompose = "1.9.3"
 composeBom = "2024.04.01"
 navigation = "2.8.3"
 kotlinx-serialization = "1.7.3"
+androidTools = "31.7.1"
+
+retrofit = "2.9.0"
+retrofitSerializationConverter = "2.11.0"
+coroutines = "1.7.3"
+okhttp3 = "4.11.0"
+ksp = "2.0.20-1.0.24"
+room = "2.6.1"
+
+hilt = "2.52"
+hiltNavigation = "1.2.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -29,7 +40,46 @@ androidx-material3 = { group = "androidx.compose.material3", name = "material3" 
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation"}
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 
+
+# Dependencies of the includes build-logic
+android-gradlePlugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp"}
+kotlin-gradlePlugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
+android-tools-common = { group = "com.android.tools", name = "common", version.ref = "androidTools" }
+
+# Retrofit
+retrofit = { module = "com.squareup.retrofit2:retrofit" , version.ref  = "retrofit" }
+retrofit-serialization = { group = "com.squareup.retrofit2", name="converter-kotlinx-serialization", version.ref ="retrofitSerializationConverter" }
+okhttp3 = { module = "com.squareup.okhttp3:okhttp", version.ref ="okhttp3" }
+
+#room
+room-runtime = { group="androidx.room", name="room-runtime", version.ref="room"}
+room-compiler = { group="androidx.room", name="room-compiler", version.ref="room"}
+room-ktx = { group="androidx.room", name="room-ktx", version.ref="room"}
+room-rxjava2 = { group="androidx.room", name="room-rxjava2", version.ref="room"}
+room-rxjava3 = { group="androidx.room", name="room-rxjava3", version.ref="room"}
+room-guava = { group="androidx.room", name="room-guava", version.ref="room"}
+room-testing = { group="androidx.room", name="room-testing", version.ref="room"}
+room-paging = { group="androidx.room", name="room-paging", version.ref="room"}
+
+#hilt
+hilt = { group="com.google.dagger", name="hilt-android", version.ref="hilt"}
+hilt-compiler = { group="com.google.dagger", name = "hilt-compiler", version.ref = "hilt"}
+hilt-testing = {group= "com.google.dagger", name="hilt-android-testing", version.ref= "hilt"}
+hilt-navigation = {group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "hiltNavigation" }
+
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 kotlinSerialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin"}
+calyr-android-library = { id = "calyr.android.library", version = "unspecified"}
+calyr-jvm-library = { id = "calyr.jvm.library", version = "unspecified"}
+ksp = { id = "com.google.devtools.ksp", version.ref="ksp"}
+#hilt
+hilt = {id="com.google.dagger.hilt.android", version.ref="hilt"}
+kapt = {id="org.jetbrains.kotlin.kapt", version.ref="kotlin"}
+
+[bundles]
+networking = [ "retrofit", "retrofit-serialization", "kotlinx-serialization-json", "okhttp3"]
+local = ["room-runtime", "room-ktx", "room-rxjava2", "room-rxjava3", "room-guava", "room-paging" ]
